--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "panda"]
 	path = panda
-	url = ../../commaai/panda.git
+	url = https://github.com/zorrobyte/panda.git
+	branch = unsafe-lta
 [submodule "opendbc"]
 	path = opendbc
 	url = ../../commaai/opendbc.git
